# uftpd

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  LICENSE  Makefile  Makefile.am  Makefile~  README.md  Server  TODO.md  _file.h  _string.c  _string.h  common.c  common.mk  configure  configure.ac  daemonize.c  fops.h  ftpcmd.c  ftpcmd.h  ftpserver.c  ftpserver.h  grade.py  grade.py~  log.c  main.c  string.c  string.h  tftpcmd.c  uftpd.8  uftpd.c  uftpd.h  wangxu
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  c-cpp.yml  coverity.yml  release.yml
debian/: .gitignore  README.Debian  changelog  config  control  copyright  dirs  docs  files  postinst  postrm  prerm  rules  templates
docs/: CONTRIBUTING.md  SECURITY.md
man/: Makefile.am  uftpd.8
src/: .gitignore  Makefile.am  common.c  ftpcmd.c  log.c  tftpcmd.c  uftpd.c  uftpd.h
test/: Makefile.am  lib.sh  maxfiles.sh  mlst.sh  tftp.sh
tests/: Makefile.am  ftp.sh  lib.sh  maxfiles.sh  start.sh  stop.sh  tftp.sh
