EXTRA_DIST       = start.sh stop.sh
EXTRA_DIST      += ftp.sh tftp.sh maxfiles.sh
CLEANFILES       = *~ *.trs *.log
TEST_EXTENSIONS  = .sh

TESTS            = start.sh
TESTS           += ftp.sh
TESTS           += tftp.sh
TESTS           += maxfiles.sh
TESTS           += stop.sh

.PRECIOUS: stop.log

